--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -145,21 +145,27 @@
 \begin{figure}
 	\begin{tikzpicture}
 	\begin{groupplot}[%
-		group style={group name=g, group size=1 by 2},
+		group style={
+			group name=g, group size=1 by 2,
+			xticklabels at=edge bottom,
+			vertical sep=0,
+			},
 		xmin=0, xmax=200, xtick={20,40,...,180},
-		xlabel={time (min)}, 
 		extra tick style={grid=major},%
 		extra x tick labels={},%
 		width=\columnwidth,
 		height=0.5\columnwidth,
 		]
-	\nextgroupplot[ylabel={Relative volume}, ymin=0.3, ymax=1, extra x ticks={12.55}]
+	\nextgroupplot[ylabel={Rel. volume}, ymin=0.3, ymax=1, extra x ticks={12.55}]
 	\addplot+[no marks,Accent1] table{volume_rel_half_cas8.txt};
 	\node[rotate=90, anchor=base] at (axis cs:12.55,0.75) (syn) {synæresis};
-	\node[right=0 of syn.south west] {swelling};
+	\node[above right=0 of syn.south west] {swelling};
 	
-	\nextgroupplot[ylabel={Excess area (\%)}, ymin=0, ymax=1.2, extra x ticks={26.7, 42.8}]
+	\nextgroupplot[ylabel={Excess area (\%)}, ymin=0, ymax=1.2, xlabel={time (min)}, extra x ticks={26.7, 42.8}]
 	\addplot+[no marks,Accent1] table{excess_area_pc_half_cas8.txt};
+	\node at (axis cs:13.35,1) {flat};
+	\node[rotate=90, anchor=east] at (axis cs:34.75,1) {wrinkling};
+	\node[anchor=west] at (axis cs:45,0.25) {wrinkling and buckling};
 	\end{groupplot}
 	
 	%\node[inner sep=0, anchor=south east] (g-1-1.outer north west){\includegraphics[width=0.45\columnwidth]{plastic_confocal}};
