--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -18,7 +18,7 @@
 \usepackage{pgfplots}
 \usepgfplotslibrary{groupplots}
 
-\pgfplotsset{compat=1.3, every axis/.append style={mark size={0.2em}}}
+\pgfplotsset{compat=1.3, every axis/.append style={thick, mark size={0.2em}}}
 
 \definecolor{Main}{rgb}{1, 0.57, 0}
 \definecolor{Accent1}{rgb}{1,0.28,0}
@@ -153,20 +153,25 @@
 		xmin=0, xmax=200, xtick={20,40,...,180},
 		extra tick style={grid=major},%
 		extra x tick labels={},%
-		width=\columnwidth,
+		width=1.04\columnwidth,
 		height=0.5\columnwidth,
 		]
 	\nextgroupplot[ylabel={Rel. volume}, ymin=0.3, ymax=1, extra x ticks={12.55}]
 	\addplot+[no marks,Accent1] table{volume_rel_half_cas8.txt};
+	\addplot+[only marks,Accent2, mark=+] table{volume_rel_half_cas8_toi.txt};
 	\node[rotate=90, anchor=base] at (axis cs:12.55,0.75) (syn) {synæresis};
 	\node[above right=0 of syn.south west] {swelling};
+	\node[lab,below left=0.2em] at (rel axis cs:1,1) {a};
 	
 	\nextgroupplot[ylabel={Excess area (\%)}, ymin=0, ymax=1.2, xlabel={time (min)}, extra x ticks={26.7, 42.8}]
 	\addplot+[no marks,Accent1] table{excess_area_pc_half_cas8.txt};
+	\addplot+[only marks,Accent2, mark=+] table{excess_area_pc_half_cas8_toi.txt};
 	\node at (axis cs:13.35,1) {flat};
 	\node[rotate=90, anchor=east] at (axis cs:34.75,1) {wrinkling};
 	\node[anchor=west] at (axis cs:45,0.25) {wrinkling and buckling};
+	\node[lab,above left=0.2em] at (rel axis cs:1,0) (b) {b};
 	\end{groupplot}
+	
 	\matrix[matrix of nodes, matrix anchor=north west, inner sep=0, column sep=0.02\textwidth, row sep=2pt] at (g c1r2.outer south west) (m){
 	Synæresis & Swelling\\
 	\includegraphics[width=0.48\columnwidth]{coupe_av10_cas8_t000.png}&
@@ -182,13 +187,12 @@
 	\includegraphics[width=0.48\columnwidth]{coupe_av10_cas8_t014.png}&
 	\includegraphics[width=0.48\columnwidth]{coupe_av10_cas8_t088.png}\\
 	};
-	\begin{scope}[->,gray,ultra thick]
-		\draw (m-2-1.east) -- (m-7-1.east) -- (m-2-2.west) -- (m-7-2.west);
-	\end{scope}
+	\draw[>->,gray,ultra thick] (m-2-1.east) -- (m-7-1.east) -- (m-2-2.west) -- (m-7-2.west);
+	\node[lab,anchor=base east] at (m-1-2.base -| b.east) {c};
 	
 	%\node[inner sep=0, anchor=south east] (g-1-1.outer north west){\includegraphics[width=0.45\columnwidth]{plastic_confocal}};
 	\end{tikzpicture}
-	\caption{Synæresis and swelling (c) Evolution of the volume of the gel phase. (d) Evolution of the midsurface area.}
+	\caption{Synæresis and swelling, cas. 8\%, GDL 7.2\% (a) Evolution of the volume of the gel phase. (b) Evolution of the midsurface area. (c) Confocal XZ slices of the cell (field of view is $1\times\SI{0.1}{\milli\metre}$), colors indicate the protein concentration. Times of the snapshots are marked as crosses on (a) and (b). Note that swelling starts \SI{14}{\minute} before wrinkling. The thickness increase is $\approx\SI{0.2}{px}$, thus not directly visible on the pictures.}
 	\label{fig:wrinkles}
 \end{figure}
 
