fig:acidgel remove yticks because not sure of synchronisation

--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -37,7 +37,7 @@
 		xlabel={time (h)}, ylabel={\textcolor{Accent1}{pH}},
 		extra tick style={grid=major},%
 		extra y ticks={4.6}, extra y tick labels={},%
-		extra x ticks={0.55, 0.64, 0.72, 0.80, 1, 1.27, 2.5}, extra x tick labels={},%
+		%extra x ticks={0.55, 0.64, 0.72, 0.80, 1, 1.27, 2.5}, extra x tick labels={},%
 		axis y line*=left,
 		width=0.925\columnwidth,
 		height=0.5\columnwidth,
