Color primary pattern

--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -101,13 +101,13 @@
 	\begin{tikzpicture}
 	\matrix[matrix of nodes, inner sep=0, column sep=0.015\textwidth, row sep=0.5em] (m){
 	33 min & 38 min & 43 min & 48 min & 1h & 1h15 & 2h30\\
-	\includegraphics[width=0.13\textwidth]{prise_0100_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0130_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0160_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0190_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0250_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0360_resized.jpg}&
-	\includegraphics[width=0.13\textwidth]{prise_0799_resized.jpg}\\
+	\includegraphics[width=0.13\textwidth]{prise_0100_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0130_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0160_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0190_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0250_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0360_color.jpg}&
+	\includegraphics[width=0.13\textwidth]{prise_0799_color.jpg}\\
 	\includegraphics[width=0.13\textwidth]{cas3p2_fluo0p8_GDL4_2_t047_crop_resized.jpg}&
 	\includegraphics[width=0.13\textwidth]{cas3p2_fluo0p8_GDL4_2_t056_crop_resized.jpg}&
 	\includegraphics[width=0.13\textwidth]{cas3p2_fluo0p8_GDL4_2_t065_crop_resized.jpg}&
