--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -1,6 +1,5 @@
 \documentclass[10pt,a4paper,twocolumn]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amssymb}
 
 %PNAS fonts
 \usepackage{mathptmx}
@@ -129,45 +128,30 @@
 
 \begin{figure}
 	\begin{tikzpicture}
-	\node[inner sep=0, anchor=north] (x800) {\includegraphics[height=0.5\columnwidth]{pattern_800um_x1.jpg}};
-	
-	\matrix[matrix of nodes, inner sep=0, matrix anchor=south, column sep=0, row sep=0.5em] at ($(x800.north)+(0,0.5em)$) (m) {		
-		\includegraphics[height=0.25\columnwidth, angle=90, trim=512px 0 0 0, clip=true]{pattern_50um.jpg} & 
-		\includegraphics[height=0.25\columnwidth, angle=90, trim=512px 0 0 0, clip=true]{pattern_100um.jpg} &
-		\includegraphics[height=0.25\columnwidth,angle=90]{pattern_250um.jpg} & 
-		\includegraphics[height=0.25\columnwidth,angle=90]{pattern_450um.jpg} \\
-	};
-	
-	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.376\columnwidth, 0.09\columnwidth) -- ++(0.278\columnwidth,0) node[midway,above]{$\lambda$};
-	\draw[ultra thick](m-1-1.north west) ++(0,0.5em) -- ++(0.167\columnwidth,0) node[midway, above] {\SI{2}{\milli\metre}};
-	%marks
-	\begin{scope}[anchor=north west,Accent1,font=\Large]
-		\node[font=\huge] at (m-1-1.north west) {$\bullet$};
-		\node at (m-1-2.north west) {$\blacktriangle$};
-		\node at (m-1-3.north west) {$\blacksquare$};
-		\node at (m-1-4.north west) {$\blacklozenge$};
-		\node at (x800.north west) {$\bigstar$}; 
-	\end{scope}
-	
 	\begin{axis}[%
 		name=g,
-		anchor=outer north west,
-		at={(m.north west)},
-		width=0.375\columnwidth,
-		height=0.2\columnwidth,
+		width=\columnwidth,
+		height=0.4\columnwidth,
 		xmin=0,xmax=1,xlabel={gap (\si{\milli\metre})},
-		xtick={0,0.4,...,0.9},
+		xtick={0.1,0.3,...,0.9},
 		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
-		label shift={-0.5em},
-		scale only axis,
 		]
-		\addplot+[only marks,Accent1, mark options={fill=Accent1}, mark=*] coordinates {(0.05,0.261)};
-		 \addplot+[only marks,Accent1, mark options={fill=Accent1}, mark=triangle*] coordinates {(0.1,0.458)}; 
-		 \addplot+[only marks,Accent1, mark options={fill=Accent1}, mark=square*] coordinates {(0.250,0.916)};
-		 \addplot+[only marks,Accent1, mark options={fill=Accent1}, mark=diamond*] coordinates {(0.450,2.075)};
-		 \addplot+[only marks,Accent1, mark options={fill=Accent1}, mark=text, text mark={$\bigstar$}] coordinates {(0.800,3.333)};
+		\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
 		\addplot+[domain=0:3, no marks, Accent1, forget plot] {4.23*x};
 	\end{axis}
+	
+	\matrix[matrix of nodes, inner sep=0, matrix anchor=south west, column sep=0.033\columnwidth, row sep=0.5em] at ($(g.outer north west)+(0,0.5em)$) (m) {
+		\SI{50}{\micro\metre} & \SI{100}{\micro\metre}\\
+		\includegraphics[width=0.225\columnwidth]{pattern_50um.jpg} &
+		\includegraphics[width=0.225\columnwidth]{pattern_100um.jpg}\\
+		\SI{250}{\micro\metre} & \SI{450}{\micro\metre}\\
+		\includegraphics[width=0.225\columnwidth]{pattern_250um.jpg} &
+		\includegraphics[width=0.225\columnwidth]{pattern_450um.jpg}\\
+	};
+	\node[inner sep=0, below left] at ($(m-2-1.north west) + (\columnwidth,0)$) (x800) {\includegraphics[width=0.45\columnwidth]{pattern_800um_x1.jpg}};
+	\node[anchor=base] at (x800.north |- m-1-2.base) {\SI{800}{\micro\metre}};
+	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.18\columnwidth, 0.05\columnwidth) -- ++(0.133\columnwidth,0) node[midway,above]{$\lambda$};
+	\draw[ultra thick](x800.south east) ++(0,-0.5em) -- ++(-0.2\columnwidth,0) node[midway, below] {\SI{5}{\milli\metre}};
 	\end{tikzpicture}
 	\caption{Cell thickness dependence of the patterns. Scale bar is common for all 5 transmission microscopy pictures.}
 	\label{fig:thickness}
