--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -5,6 +5,7 @@
 \usepackage{mathptmx}
 \usepackage{tgheros}
 
+\usepackage{amssymb}
 \usepackage{siunitx}
 \usepackage{multirow}
 
@@ -128,32 +129,52 @@
 
 \begin{figure}
 	\begin{tikzpicture}
+	\matrix[matrix of nodes, inner sep=0, column sep=0.01\columnwidth, row sep=0.01\columnwidth] (m) {
+		\includegraphics[width=0.245\columnwidth]{pattern_50um.jpg}&
+		\includegraphics[width=0.245\columnwidth]{pattern_100um.jpg}&
+		\includegraphics[width=0.245\columnwidth]{pattern_250um.jpg}&
+		\includegraphics[width=0.245\columnwidth]{pattern_450um.jpg}\\
+	};
+	\node[inner sep=0, below left=0.01\columnwidth and 0 of m.south east] (x800) {\includegraphics[width=0.49\columnwidth]{pattern_800um_x1.jpg}};
+	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.196\columnwidth, 0.05\columnwidth) -- ++(0.145\columnwidth,0) node[midway,above]{$\lambda$};
+	\draw[ultra thick,Main](x800.north east) -- ++(-0.217\columnwidth,0) node[midway,below] {\SI{5}{\milli\metre}};
+	
 	\begin{axis}[%
 		name=g,
-		width=\columnwidth,
-		height=0.4\columnwidth,
+		anchor=left of north west,
+		at={($(m.south west)+(0,-0.01\columnwidth)$)},
+		scale only axis,
+		width=0.4\columnwidth,
+		height=0.175\columnwidth,
 		xmin=0,xmax=1,xlabel={gap (\si{\milli\metre})},
-		xtick={0.1,0.3,...,0.9},
+		xtick={0,0.4,...,0.9},
 		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
+		label shift=-0.5em,
+		cycle multi list={%
+			Accent1,no marks\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=*\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=triangle*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=triangle*\\%
+			Accent1,only marks,every mark/.append style={fill=Accent1},mark=square*\\%
+			Accent1,only marks,every mark/.append style={fill=white},mark=square*\\%
+		}
 		]
-		\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
-		\addplot+[domain=0:3, no marks, Accent1, forget plot] {4.23*x};
+		\addplot+[domain=0:3] {4.23*x};
+		\addplot coordinates {(0.05,0.261)};\label{pgfplots:50}
+		\addplot coordinates {(0.1,0.458)};\label{pgfplots:100}
+		\addplot coordinates {(0.250,0.916)};\label{pgfplots:250}
+		\addplot coordinates {(0.450,2.075)};\label{pgfplots:450}
+		\addplot coordinates {(0.800,3.333)};\label{pgfplots:800}
+		%\addplot+[only marks,Accent1, mark options={fill=Accent1}] coordinates {(0.05,0.261) (0.1,0.458) (0.250,0.916) (0.450,2.075) (0.800,3.333)};
 	\end{axis}
-	
-	\matrix[matrix of nodes, inner sep=0, matrix anchor=south west, column sep=0.033\columnwidth, row sep=0.5em] at ($(g.outer north west)+(0,0.5em)$) (m) {
-		\SI{50}{\micro\metre} & \SI{100}{\micro\metre}\\
-		\includegraphics[width=0.225\columnwidth]{pattern_50um.jpg} &
-		\includegraphics[width=0.225\columnwidth]{pattern_100um.jpg}\\
-		\SI{250}{\micro\metre} & \SI{450}{\micro\metre}\\
-		\includegraphics[width=0.225\columnwidth]{pattern_250um.jpg} &
-		\includegraphics[width=0.225\columnwidth]{pattern_450um.jpg}\\
-	};
-	\node[inner sep=0, below left] at ($(m-2-1.north west) + (\columnwidth,0)$) (x800) {\includegraphics[width=0.45\columnwidth]{pattern_800um_x1.jpg}};
-	\node[anchor=base] at (x800.north |- m-1-2.base) {\SI{800}{\micro\metre}};
-	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.18\columnwidth, 0.05\columnwidth) -- ++(0.133\columnwidth,0) node[midway,above]{$\lambda$};
-	\draw[ultra thick](x800.south east) ++(0,-0.5em) -- ++(-0.2\columnwidth,0) node[midway, below] {\SI{5}{\milli\metre}};
+	\node[below right=0 of m-1-1.north west] {\ref{pgfplots:50}};
+	\node[below right=0 of m-1-2.north west] {\ref{pgfplots:100}};
+	\node[below right=0 of m-1-3.north west] {\ref{pgfplots:250}};
+	\node[below right=0 of m-1-4.north west] {\ref{pgfplots:450}};
+	\node[below right=0 of x800.north west] {\ref{pgfplots:800}};
 	\end{tikzpicture}
-	\caption{Cell thickness dependence of the patterns. Scale bar is common for all 5 transmission microscopy pictures.}
+	\caption{Cell thickness dependence of the patterns. Each transmission microscopy picture corresponds to a point on the graph. Scale bar is common for all pictures.}
 	\label{fig:thickness}
 \end{figure}
 
